<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GradeCalculatorActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/studentName_prompt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/studentName"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:singleLine="true"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quizScore_label"/>

                <EditText
                    android:id="@+id/quizScore"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assignmentScore_label"/>

                <EditText
                    android:id="@+id/assignmentScore"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/midtermScore_label"/>

                <EditText
                    android:id="@+id/midtermScore"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"/>
            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finalScore_label"/>

                <EditText
                    android:id="@+id/finalScore"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number" />
            </LinearLayout>





        </LinearLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_button"/>

        <TextView
            android:id="@+id/calculatedLetterGrade"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:textSize="52sp"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>